@@ -13,7 +13,7 @@ public class IoUtils {
 
     //启动完成之后自动打开浏览器并访问 Url 地址
     public static void index() {
-        String[] url = {"http://localhost:" + SpringUtils.getPort()};
+        String url = "http://localhost:" + SpringUtils.getPort();
         // 获取操作系统的名字
         try {
             // 苹果的打开方式
@@ -21,13 +21,12 @@ public class IoUtils {
                 Class<?> fileMgr = Class.forName("com.apple.eio.FileManager");
                 Method openURL = fileMgr.getDeclaredMethod("openURL",
                         String.class);
-                openURL.invoke(null, url[0]);
+                openURL.invoke(null, url);
                 return;
             }
             // windows的打开方式。
             if (SystemUtils.IS_OS_WINDOWS) {
-                Runtime.getRuntime().exec(
-                        new String[]{"rundll32 url.dll,FileProtocolHandler ", url[0]});
+                Runtime.getRuntime().exec(new String[]{"rundll32", "url.dll,FileProtocolHandler", url});
                 return;
             }
             //Unix or Linux的打开方式
@@ -50,10 +49,8 @@ public class IoUtils {
                     throw new Exception("Could not find web browser");
                 else
                     // 这个值在上面已经成功的得到了一个进程。
-                    Runtime.getRuntime().exec(new String[]{browser, url[0]});
+                    Runtime.getRuntime().exec(new String[]{browser, url});
             }
-
-
         } catch (Exception e) {
             log.error("浏览器打开错误：{}", e.getMessage());
         }
